--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import "../styles.scss";
 
 .navigation {
-    background-color: $primary-900;
+    background-color: $primary-400;
     overflow: hidden;
     display: flex;
     flex-wrap: nowrap;
@@ -9,6 +9,7 @@
     align-items: center;
     color: $primary-100;
     font-size: 20px;
+    height: 70px;
 }
 
 #title {
@@ -17,25 +18,36 @@
 
 .flexHalf {
     width: 50%;
+    display: inherit;
 }
 
 .navigation .flexHalf a {
-    float: left;
+    display: block;
     color: $primary-100;
     text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
     font-size: 20px;
+    border: 2px solid $primary-700;
+    border-radius: 30px;
+    padding: 10px 20px;
+    margin: 0 10px;
+    transition: box-shadow 0.5s, transform 0.1s cubic-bezier(0.55, 0, 0.55, 0.2), color 0.5s;
+    transform-origin: 50% 75%;
 }
 
 .navigation .flexHalf a:hover {
-    background-color: $primary-800;
-    color: $primary-200;
+    color: $primary-900;
+    background-color: $primary-400;
+    box-shadow: -0px -0px 10px $primary-600 inset;
+    transition: box-shadow 0.5s, transform 0.1s cubic-bezier(0.55, 0, 0.55, 0.2), color 0.5s;
+    // transform: scale(1.05);
 }
 
 .navigation .flexHalf a.active {
-    background-color: $primary-700;
-    color: $primary-300;
+    background-color: $primary-400;
+    box-shadow: -0px -0px 10px $primary-700 inset;
+    transition: box-shadow 0.5s, transform 0.1s cubic-bezier(0.55, 0, 0.55, 0.2), color 0.5s;
+    transform: scale(1.05);
 }
 
 #page-content {
