--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import "../styles.scss";
 
 .navigation {
-    background-color: $primary-400;
+    background-color: #072a5e;
     overflow: hidden;
     display: flex;
     flex-wrap: nowrap;
@@ -23,7 +23,7 @@
 
 .navigation .flexHalf a {
     display: block;
-    color: $primary-100;
+    color: $primary-500;
     text-align: center;
     text-decoration: none;
     font-size: 20px;
@@ -31,23 +31,23 @@
     border-radius: 30px;
     padding: 10px 20px;
     margin: 0 10px;
-    transition: box-shadow 0.5s, transform 0.1s cubic-bezier(0.55, 0, 0.55, 0.2), color 0.5s;
+    transition: box-shadow 0.4s, background-color 0.4s, transform 0.1s cubic-bezier(0.55, 0, 0.55, 0.2), color 0.5s;
     transform-origin: 50% 75%;
 }
 
 .navigation .flexHalf a:hover {
     color: $primary-900;
-    background-color: $primary-400;
-    box-shadow: -0px -0px 10px $primary-600 inset;
-    transition: box-shadow 0.5s, transform 0.1s cubic-bezier(0.55, 0, 0.55, 0.2), color 0.5s;
-    // transform: scale(1.05);
+    background-color: $primary-200;
+    box-shadow: -0px -0px 10px $primary-700 inset;
+    transition: box-shadow 0.4s, background-color 0.4s, transform 0.1s cubic-bezier(0.55, 0, 0.55, 0.2), color 0.1s;
 }
 
 .navigation .flexHalf a.active {
-    background-color: $primary-400;
+    color: $primary-900;
+    background-color: $primary-300;
     box-shadow: -0px -0px 10px $primary-700 inset;
-    transition: box-shadow 0.5s, transform 0.1s cubic-bezier(0.55, 0, 0.55, 0.2), color 0.5s;
-    transform: scale(1.05);
+    transition: box-shadow 0.4s, background-color 0.4s, transform 0.1s cubic-bezier(0.55, 0, 0.55, 0.2), color 0.1s;
+    transform: scale(1.1);
 }
 
 #page-content {
