--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="navigation">
-  <div class="flexHalf">
+  <div id="navigationLeft">
     <span id="title">{{ title }}</span>
   </div>
 
-  <div class="flexHalf">
+  <div id="navigationRight">
     <a id="devices-link" routerLink="/devices" routerLinkActive="active">Geräte</a>
     <a id="location-link" routerLink="/locations" routerLinkActive="active">Geschäftsstellen</a>
     <a id="user-link" routerLink="/users" routerLinkActive="active">Benutzer</a>
