--- a/src/app/views/locations/locations.component.scss
+++ b/src/app/views/locations/locations.component.scss
@@ -9,60 +9,48 @@
 
 .filterInput {
     outline: none;
-    background-color: $primary-200;
+    margin: 5px;
     height: 50px;
     width: 70%;
-    margin: 5px;
-    padding: 0 15px;
-    border: 2px solid $primary-500;
-    border-radius: 35px;
-    font-size: 24px;
-    box-shadow: 0 0 10px $primary-600 inset;
-}
-
-.filterInput:focus {
-    box-shadow: 0 0 10px $primary-700 inset;
+    font-size: 16pt;
 }
 
 .filterButton {
-    border: 2px solid $primary-500;
-    border-radius: 35px;
-    background-color: $primary-200;
-    box-shadow: 0 0 10px $primary-600 inset;
-    height: 50px;
     margin: 5px;
-    padding: 0 15px;
-    font-size: 24px;
+    height: 54px;
+    font-size: 16pt;
 }
 
-.filterButton:focus {
-    box-shadow: 0 0 10px $primary-700 inset;
-    outline: none;
-}
-
-input[type="checkbox"] {
+.collapsibleToggle {
     display: none;
 }
+
 .collapsibleWrapper {
     margin: 1.2rem 0;
 }
+
 .collapsibleLabel {
+    padding: 1rem;
     display: block;
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: 7px;
+    background-color: $info-700;
     font-weight: bold;
     font-family: monospace;
     font-size: 1.2rem;
     text-transform: uppercase;
     text-align: center;
-    padding: 1rem;
     color: #ddd;
-    background: #0069ff;
-    cursor: pointer;
-    border-radius: 7px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     transition: all 0.25s ease-out;
 }
+
 .collapsibleLabel:hover {
     color: #fff;
 }
+
 .collapsibleLabel::before {
     content: " ";
     display: inline-block;
@@ -74,6 +62,7 @@ input[type="checkbox"] {
     transform: translateY(-2px);
     transition: transform 0.2s ease-out;
 }
+
 .collapsibleToggle:checked + .collapsibleLabel::before {
     transform: rotate(90deg) translateX(-3px);
 }
@@ -81,9 +70,21 @@ input[type="checkbox"] {
 .collapsibleToggle:checked + .collapsibleLabel + .collapsibleContent {
     max-height: 350px;
 }
+
 .collapsibleToggle:checked + .collapsibleLabel {
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
+}
+
+.collapsibleContent {
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.25s ease-in-out;
+
+    background-color: $info-100;
+    border-bottom: 1px solid $info-400;
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
 }
 
 .contentTitle {
@@ -95,15 +96,77 @@ input[type="checkbox"] {
 }
 
 .contentBody {
-    background: rgba(0, 105, 255, 0.2);
-    border-bottom: 1px solid rgba(0, 105, 255, 0.45);
-    border-bottom-left-radius: 7px;
-    border-bottom-right-radius: 7px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     padding: 0.5rem 1rem;
 }
 
-.collapsibleContent {
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height 0.25s ease-in-out;
+.contentBody div {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.bodyName {
+    width: 100%;
+}
+
+.contentBody .bodyAddress {
+    flex-wrap: wrap;
+}
+
+.bodyAddress {
+    width: 100%;
+}
+
+.bodyAddress div {
+    width: 100%;
+}
+
+.contentBody div label {
+    margin: 5px;
+    padding: 0 5px;
+    height: 40px;
+    min-width: 60px;
+    font-size: 15pt;
+    line-height: 40px;
+}
+
+.contentBody div input[type="text"] {
+    outline: none;
+    margin: 5px;
+    height: 40px;
+    width: calc(100% - 50px);
+}
+
+.bodyActions button {
+    margin: 5px;
+    padding: 0 15px;
+    height: 50px;
+    font-size: 24px;
+}
+
+.bodyActions button:focus {
+    outline: none;
+}
+
+.actionCancel {
+}
+
+.actionCancel:focus {
+}
+
+.actionDelete {
+}
+
+.actionDelete:focus {
+}
+
+.actionSave {
+}
+
+.actionSave:focus {
 }
