--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,15 +18,15 @@ $success-700: #108a45;
 $success-800: #0a6f40;
 $success-900: #065c3c;
 
-$info-100: #fdfaea;
-$info-200: #fbf5d5;
-$info-300: #f5eabd;
-$info-400: #ebdca8;
-$info-500: #dfca8a;
-$info-600: #bfa664;
-$info-700: #a08545;
-$info-800: #81652c;
-$info-900: #6b4e1a;
+$info-100: #f5f5f5;
+$info-200: #eeeeee;
+$info-300: #e0e0e0;
+$info-400: #bdbdbd;
+$info-500: #9e9e9e;
+$info-600: #757575;
+$info-700: #616161;
+$info-800: #424242;
+$info-900: #212121;
 
 $warning-100: #fefdd0;
 $warning-200: #fdfaa3;
@@ -51,8 +51,79 @@ $danger-900: #7a0d35;
 // nice color, may be used sometime
 // $testing: #42f0a2;
 
-
 body {
     background-color: $primary-100;
     font-family: Arial, sans-serif;
+}
+
+.input {
+    padding: 0 15px;
+    background-color: $info-200;
+    border: 2px solid $info-500;
+    border-radius: 10px;
+    box-shadow: 0 0 2px $info-600 inset;
+}
+
+.input:focus {
+    box-shadow: 0 0 5px $info-700 inset;
+}
+
+.buttonPrimary {
+    border: 2px solid $primary-500;
+    border-radius: 10px;
+    background-color: $primary-200;
+    box-shadow: 0 0 2px $primary-600 inset;
+    padding: 0 15px;
+}
+
+.buttonPrimary:focus {
+    box-shadow: 0 0 5px $primary-700 inset;
+}
+
+.buttonSuccess {
+    border: 2px solid $success-500;
+    border-radius: 10px;
+    background-color: $success-200;
+    box-shadow: 0 0 2px $success-600 inset;
+    padding: 0 15px;
+}
+
+.buttonSuccess:focus {
+    box-shadow: 0 0 5px $success-700 inset;
+}
+
+.buttonInfo {
+    border: 2px solid $info-500;
+    border-radius: 10px;
+    background-color: $info-200;
+    box-shadow: 0 0 2px $info-600 inset;
+    padding: 0 15px;
+}
+
+.buttonInfo:focus {
+    box-shadow: 0 0 5px $info-700 inset;
+}
+
+.buttonWarning {
+    border: 2px solid $warning-500;
+    border-radius: 10px;
+    background-color: $warning-200;
+    box-shadow: 0 0 2px $warning-600 inset;
+    padding: 0 15px;
+}
+
+.buttonWarning:focus {
+    box-shadow: 0 0 5px $warning-700 inset;
+}
+
+.buttonDanger {
+    border: 2px solid $danger-500;
+    border-radius: 10px;
+    background-color: $danger-200;
+    box-shadow: 0 0 2px $danger-600 inset;
+    padding: 0 15px;
+}
+
+.buttonDanger:focus {
+    box-shadow: 0 0 5px $danger-700 inset;
 }
