--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,25 @@
-<div class="navigation">
-  <div id="navigationLeft">
-    <span id="title">{{ title }}</span>
+<ng-container *ngIf="'authenticate' !== this.title; then notauthenticated; else authenticate">
+</ng-container>
+
+<ng-template #notauthenticated>
+  <div class="navigation">
+    <div id="navigationLeft">
+      <span id="title">{{ title }}</span>
+    </div>
+
+    <div id="navigationRight">
+      <a id="devices-link" routerLink="/devices" routerLinkActive="active">Geräte</a>
+      <a id="location-link" routerLink="/locations" routerLinkActive="active">Geschäftsstellen</a>
+      <a id="user-link" routerLink="/users" routerLinkActive="active">Benutzer</a>
+      <a id="logout-link" routerLink="/logout" routerLinkActive="active">Abmelden</a>
+    </div>
   </div>
 
-  <div id="navigationRight">
-    <a id="devices-link" routerLink="/devices" routerLinkActive="active">Geräte</a>
-    <a id="location-link" routerLink="/locations" routerLinkActive="active">Geschäftsstellen</a>
-    <a id="user-link" routerLink="/users" routerLinkActive="active">Benutzer</a>
-    <a id="logout-link" routerLink="/logout" routerLinkActive="active">Abmelden</a>
+  <div id="page-content">
+    <router-outlet></router-outlet>
   </div>
-</div>
+</ng-template>
 
-<div id="page-content">
+<ng-template #authenticate>
   <router-outlet></router-outlet>
-</div>
+</ng-template>
