added not finished login frontend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="this.authService.loggedIn() == true; then loggedIn; else notLoggedIn">
+<ng-container *ngIf="this.authService.loggedIn == true; then loggedIn; else notLoggedIn">
 </ng-container>
 
 <ng-template #loggedIn>
