--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<div class="background">
+    <div class="login-wrapper">
+        <label for="userName">Benutzername</label>
+        <input type="text" id="userName" [(ngModel)]="userData.userName">
+
+        <label for="passWord">Passwort</label>
+        <input type="password" id="passWord" [(ngModel)]="userData.passWord">
+
+        <button (click)="prepareLogin()">Anmelden</button>
+        <button (click)="prepareLogin(true)">Als Gast anmelden</button>
+    </div>
+</div>
