--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -31,7 +31,53 @@
     flex-wrap: wrap;
 }
 
-.login-wrapper > * {
+.flex-item {
     width: 100%;
-    height: 50px;
+    height: 40px;
+    margin-bottom: 10px;
+}
+
+.flex-itemHalf {
+    width: 50%;
+    height: 40px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+#top-text {
+    text-align: center;
+}
+
+.flex-item > span {
+    font-size: 24pt;
+    text-transform: uppercase;
+    line-height: 40px;
+    text-align: center;
+}
+
+input {
+    width: 90%;
+    height: 100%;
+    border-radius: 5px;
+    font-size: 20pt;
+}
+
+input:focus {
+    outline: none;
+}
+
+label {
+    line-height: 40px;
+    font-size: 19pt;
+}
+
+button {
+    height: 100%;
+    width: 80%;
+    margin-left: 50%;
+    transform: translate(-50%, 0);
+}
+
+button:focus {
+    outline: none;
 }
