fixed api calls and added create user api call

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -8,8 +8,8 @@
         <div class="flex-item"> <label for="passWord">Passwort</label> </div>
         <div class="flex-item"> <input type="password" id="passWord" [(ngModel)]="userData.passWord"> </div>
 
-        <div class="flex-itemHalf"> <button class="buttonPrimary" (click)="prepareLogin()">Anmelden</button> </div>
-        <div class="flex-itemHalf"> <button class="buttonInfo" (click)="prepareLogin(true)">Als Gast Anmelden</button>
+        <div class="flex-item"> <button class="buttonPrimary" (click)="prepareLogin()">Anmelden</button> </div>
+        <div class="flex-item"> <button class="buttonInfo" (click)="prepareLogin(true)">Als Gast Anmelden</button>
         </div>
     </div>
 </div>
