--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="background">
-    <div class="login-wrapper">
+    <div class="login-wrapper" (keydown.enter)="prepareLogin()">
         <div class="flex-item" id="top-text"> <span>Login</span> </div>
 
         <div class="flex-item"> <label for="userName">Benutzername</label> </div>
