--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,6 +38,7 @@
     padding: 10px 20px;
     margin: 0 10px;
     transition: box-shadow 0.4s, background-color 0.4s, transform 0.1s cubic-bezier(0.55, 0, 0.55, 0.2), color 0.5s;
+    cursor: pointer;
 }
 
 .navigation #navigationRight a:hover {
