--- a/src/app/views/locations/locations.component.html
+++ b/src/app/views/locations/locations.component.html
@@ -31,8 +31,8 @@
 
                     <div class="bodyActions">
                         <button class="buttonInfo actionCancel" (click)="cancel(i)">Abbrechen</button>
-                        <button class="buttonDanger actionDelete" (click)="deleteDevice(i)">Löschen</button>
-                        <button class="buttonSuccess actionSave" (click)="saveDevice(i)">Speichern</button>
+                        <button class="buttonDanger actionDelete" (click)="deleteLocation(i)">Löschen</button>
+                        <button class="buttonSuccess actionSave" (click)="saveLocation(i)">Speichern</button>
 
                     </div>
                 </div>
