--- a/src/app/views/devices/devices.component.html
+++ b/src/app/views/devices/devices.component.html
@@ -1,17 +1,155 @@
-<div id="filterContainer">
-    <input type="text" id="filterInput">
-    <button id="filterButton">Filtern</button>
+<div>
+    <div class="filterWrapper">
+        <input type="text" class="input filterInput" placeholder="Filter" [(ngModel)]="filterValue" (keyup)="prepareFilter($event)">
+        <!-- <button class="buttonInfo filterButton" (click)="doFilter(filterValue)">Filtern</button> -->
+        <a class="buttonPrimary createDeviceButton" href="#popup1">Gerät hinzufügen</a>
+        <!-- <button class="buttonPrimary createDeviceButton" (click)="createDevice()">Gerät hinzufügen</button> -->
+    </div>
+
+    <ng-container *ngIf="mutableFilteredDeviceList.length == 0">
+        <div class="body">
+            DeviceList is empty!
+        </div>
+    </ng-container>
+
+    <ng-container *ngIf="mutableFilteredDeviceList.length != 0">
+        <div class="scrollWrapper">
+            <ng-container *ngFor="let device of mutableFilteredDeviceList; let i = index">
+                <div class="collapsibleWrapper">
+                    <input [attr.id]="'collapsibleCheckbox_' + i" class="collapsibleToggle" type="checkbox">
+                    <label [attr.for]="'collapsibleCheckbox_' + i" class="collapsibleLabel">{{ device.Label }}</label>
+                    <div class="collapsibleContent">
+                        <div class="contentBody">
+                            <div class="body-id">
+                                <label [attr.for]="'ID' + i" class="bodyInputLabel">ID</label>
+                                <input type="text" [attr.id]="'ID' + i" class="input" [(ngModel)]="device.ID" readonly>
+                            </div>
+
+                            <div class="body-label">
+                                <label [attr.for]="'label' + i" class="bodyInputLabel">Label</label>
+                                <input type="text" [attr.id]="'label' + i" class="input" [(ngModel)]="device.Label">
+                            </div>
+
+                            <div class="body-desciptiveInformation">
+                                <label [attr.for]="'descriptiveInformation' + i"
+                                    class="bodyInputLabel">DescriptiveInformation</label>
+                                <input type="text" [attr.id]="'descriptiveInformation' + i" class="input"
+                                    [(ngModel)]="device.DescriptiveInformation">
+                            </div>
+
+                            <div class="body-serialNumber">
+                                <label [attr.for]="'serialNumber' + i" class="bodyInputLabel">SerialNumber</label>
+                                <input type="text" [attr.id]="'serialNumber' + i" class="input"
+                                    [(ngModel)]="device.SerialNumber">
+                            </div>
+
+                            <div class="body-manufacturer">
+                                <label [attr.for]="'manufacturer' + i" class="bodyInputLabel">Manufacturer</label>
+                                <input type="text" [attr.id]="'manufacturer' + i" class="input"
+                                    [(ngModel)]="device.Manufacturer">
+                            </div>
+
+                            <div class="body-manufacturer">
+                                <label [attr.for]="'model' + i" class="bodyInputLabel">Model</label>
+                                <input type="text" [attr.id]="'model' + i" class="input" [(ngModel)]="device.Model">
+                            </div>
+
+                            <div class="body-rentStart">
+                                <label [attr.for]="'rentStart' + i" class="bodyInputLabel">RentStart</label>
+                                <input type="date" [attr.id]="'rentStart' + i" class="input"
+                                    [(ngModel)]="device.RentStart">
+                            </div>
+
+                            <div class="body-expectedReturn">
+                                <label [attr.for]="'expectedReturn' + i" class="bodyInputLabel">ExpectedReturn</label>
+                                <input type="date" [attr.id]="'expectedReturn' + i" class="input"
+                                    [(ngModel)]="device.ExpectedReturn">
+                            </div>
+
+                            <div class="body-locationID">
+                                <label [attr.for]="'locationID' + i" class="bodyInputLabel">LocationID</label>
+                                <input type="text" [attr.id]="'locationID' + i" class="input"
+                                    [(ngModel)]="device.LocationID">
+                            </div>
+
+                            <div class="body-personID">
+                                <label [attr.for]="'personID' + i" class="bodyInputLabel">PersonID</label>
+                                <input type="text" [attr.id]="'personID' + i" class="input"
+                                    [(ngModel)]="device.PersonID">
+                            </div>
+
+                            <div class="bodyActions">
+                                <button class="buttonInfo actionCancel" (click)="cancel(i)">Abbrechen</button>
+                                <button class="buttonDanger actionDelete" (click)="deleteDevice(device.ID)">Löschen</button>
+                                <button class="buttonSuccess actionSave" (click)="updateDevice(device.ID)">Speichern</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </ng-container>
+        </div>
+    </ng-container>
 </div>
 
 
-<div class="wrap-collabsible">
-    <input id="collapsible" class="toggle" type="checkbox">
-    <label for="collapsible" class="lbl-toggle">More Info</label>
-    <div class="collapsible-content">
-        <div class="content-inner">
-            <p> QUnit is by calling one of the object that are embedded in JavaScript, and faster JavaScript program
-                could also used with its elegant, well documented, and functional programming using JS, HTML pages
-                Modernizr is a popular browsers without plug-ins. Test-Driven Development.</p>
+<div id="popup1" class="overlay">
+    <div class="popup">
+        <h2>Neues Gerät erstellen</h2>
+        <a class="close" href="#">&times;</a>
+        <div class="content">
+            <div class="contentBody">
+                <div class="body-label">
+                    <label for="label" class="bodyInputLabel">Label</label>
+                    <input type="text" id="label" class="input" [(ngModel)]="newDevice.Label">
+                </div>
+
+                <div class="body-desciptiveInformation">
+                    <label for="descriptiveInformation" class="bodyInputLabel">DescriptiveInformation</label>
+                    <input type="text" id="descriptiveInformation" class="input"
+                        [(ngModel)]="newDevice.DescriptiveInformation">
+                </div>
+
+                <div class="body-serialNumber">
+                    <label for="serialNumber" class="bodyInputLabel">SerialNumber</label>
+                    <input type="text" id="serialNumber" class="input" [(ngModel)]="newDevice.SerialNumber">
+                </div>
+
+                <div class="body-manufacturer">
+                    <label for="manufacturer" class="bodyInputLabel">Manufacturer</label>
+                    <input type="text" id="manufacturer" class="input" [(ngModel)]="newDevice.Manufacturer">
+                </div>
+
+                <div class="body-manufacturer">
+                    <label for="model" class="bodyInputLabel">Model</label>
+                    <input type="text" id="model" class="input" [(ngModel)]="newDevice.Model">
+                </div>
+
+                <div class="body-rentStart">
+                    <label for="rentStart" class="bodyInputLabel">RentStart</label>
+                    <input type="date" id="rentStart" class="input" [(ngModel)]="newDevice.RentStart">
+                </div>
+
+                <div class="body-expectedReturn">
+                    <label for="expectedReturn" class="bodyInputLabel">ExpectedReturn</label>
+                    <input type="date" id="expectedReturn" class="input" [(ngModel)]="newDevice.ExpectedReturn">
+                </div>
+
+                <div class="body-locationID">
+                    <label for="locationID" class="bodyInputLabel">LocationID</label>
+                    <input type="text" id="locationID" class="input" [(ngModel)]="newDevice.LocationID">
+                </div>
+
+                <div class="body-personID">
+                    <label for="personID" class="bodyInputLabel">PersonID</label>
+                    <input type="text" id="personID" class="input" [(ngModel)]="newDevice.PersonID">
+                </div>
+
+                <div class="bodyActions">
+                    <a class="buttonInfo actionCancel" href="#">Abbrechen</a>
+                    <a class="buttonSuccess actionSave" href="#" id="popUpSave"
+                        (click)="createDevice(newDevice)">Speichern</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
