--- a/src/app/views/devices/devices.component.scss
+++ b/src/app/views/devices/devices.component.scss
@@ -65,7 +65,7 @@
 
 .scrollWrapper::-webkit-scrollbar {
     width: 12px;
-    background-color: $warning-500;
+    background-color: $info-100;
 }
 
 .scrollWrapper::-webkit-scrollbar-thumb {
